@@ -1,0 +1,2 @@
+ordinal,branch_path,weight
+0,"[FromShakeMap]",1.0000000e+00
